feat: Enhance AI-Native MCP server with new tools and improved functionality
- Updated package.json to reflect new AI-native features and improved description.
- Expanded ObsidianApiClient with enhanced methods for directory and file operations, including listDirectory, readFile, writeFile, deleteItem, createOrUpdateNote, getDailyNote, and getRecentNotes.
- Introduced advanced search capabilities with searchVault and findRelatedNotes methods.
- Defined new tools in ObsidianMcpServer for AI-native operations, including list_directory, read_file, write_file, delete_item, create_or_update_note, get_daily_note, get_recent_notes, search_vault, and find_related_notes.
- Implemented legacy methods for backward compatibility.
- Added integration tests for AI-native tools to ensure functionality and reliability.

--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "notes",
     "rest-api",
     "llm",
-    "ai"
+    "ai",
+    "ai-native",
+    "task-oriented",
+    "intelligent-tools",
+    "knowledge-management"
   ],
   "author": "shelfwood",
   "license": "MIT",
-  "description": "MCP server providing LLM tool calls for Obsidian vault interaction via REST API",
+  "description": "AI-Native MCP server for Obsidian vaults with task-oriented, intelligent tools designed for LLM workflows",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/j-shelfwood/obsidian-local-rest-api-mcp.git"
