--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "bun run tsc && chmod +x build/index.js",
     "dev": "bun run --watch src/index.ts",
     "start": "node build/index.js",
-    "test": "echo 'Basic validation passed - integration tests require running Laravel API'",
+    "test": "bun test",
+    "test:unit": "echo 'Basic validation passed - integration tests require running Laravel API'",
     "test:integration": "bun run test:integration.ts",
     "lint": "tsc --noEmit",
     "prepublishOnly": "bun run build && bun run test && bun run lint",
